cmake_minimum_required(VERSION 3.2)

OPTION(DEV_PC "Enable debugging features to be run on a development PC" Off)
OPTION(BUILD_WEB "Build the uis based on web technology" Off)

EXEC_PROGRAM("git" ${CMAKE_CURRENT_SOURCE_DIR} ARGS "rev-parse --abbrev-ref HEAD" OUTPUT_VARIABLE BRANCH_NAME)

SET(C15_INSTALL_PATH ${CMAKE_INSTALL_PREFIX}/C15)

IF(DEV_PC)
  SET(C15_ROOT_PATH ${CMAKE_INSTALL_PREFIX})
ELSE()
  SET(C15_ROOT_PATH ${CMAKE_INSTALL_PREFIX}/../..)
ENDIF()

SET(PLAYGROUND_HTTPSERVER_PORT 8080)
SET(RECORDER_WEBSOCKET_PORT 8889)
SET(RECORDER_HTTPSERVER_PORT 8890)
SET(PLAYGROUND_OLED_WEBSOCKET_PORT 8891)
SET(PLAYGROUND_PRESETLOAD_LOG_PORT 8892)
SET(SYNCJS_WEBSOCKET_PORT 8893)

add_definitions(
  -DPLAYGROUND_HTTPSERVER_PORT=${PLAYGROUND_HTTPSERVER_PORT} 
  -DRECORDER_WEBSOCKET_PORT=${RECORDER_WEBSOCKET_PORT} 
  -DRECORDER_HTTPSERVER_PORT=${RECORDER_HTTPSERVER_PORT}
  -DPLAYGROUND_OLED_WEBSOCKET_PORT=${PLAYGROUND_OLED_WEBSOCKET_PORT}
  -DPLAYGROUND_PRESETLOAD_LOG_PORT=${PLAYGROUND_PRESETLOAD_LOG_PORT}
  -DSYNCJS_WEBSOCKET_PORT=${SYNCJS_WEBSOCKET_PORT}
  )

add_subdirectory(bbb)
add_subdirectory(epc)
add_subdirectory(playcontroller)
add_subdirectory(shared)
add_subdirectory(supervisor)

IF(BUILD_WEB)
  add_subdirectory(web)
ENDIF()
